cabal-version:      3.0
name:               praha-config
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          Jan Hamal Dvořák
maintainer:         mordae@anilinux.org
author:             Jan Hamal Dvořák
homepage:           https://github.com/mordae/hs-praha#readme
bug-reports:        https://github.com/mordae/hs-praha/issues
synopsis:           Practical Configuration Management
description:
    Practical configuration management based on process environment,
    good enough for typical web applications.

category:           System
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/mordae/hs-praha

library
    exposed-modules:    Praha.Config.Environment
    hs-source-dirs:     lib
    default-language:   GHC2021
    default-extensions:
        BlockArguments NoImplicitPrelude OverloadedStrings

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Widentities -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.13 && <5,
        unliftio >=0.2,
        praha >=0.1
