cabal-version: 3.0

name: praha-logger
version: 0.1.0.0
homepage: https://github.com/mordae/hs-praha#readme
bug-reports: https://github.com/mordae/hs-praha/issues

license: MIT
license-file: LICENSE
copyright: Jan Hamal Dvořák
maintainer: mordae@anilinux.org
author: Jan Hamal Dvořák

synopsis: Practical Monad Transformer for Logging
description:
  Practical class and a monad transformer for logging.

category: System
build-type: Simple
extra-source-files: README.md

source-repository head
    type: git
    location: https://github.com/mordae/hs-praha

library
    default-language: Haskell2010

    default-extensions:
        DefaultSignatures
        FlexibleInstances
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        TypeFamilies

    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Widentities
        -Wredundant-constraints

    build-depends:
      , base                 >=4.13 && <5
      , fast-logger          >=3.0  && <4
      , praha

    exposed-modules:
        Praha.Logger

    hs-source-dirs: lib

    ghc-options:
        -Wunused-packages
