cabal-version:      3.0
name:               praha-logger
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          Jan Hamal Dvořák
maintainer:         mordae@anilinux.org
author:             Jan Hamal Dvořák
homepage:           https://github.com/mordae/hs-praha#readme
bug-reports:        https://github.com/mordae/hs-praha/issues
synopsis:           Practical Monad Transformer for Logging
description:        Practical class and a monad transformer for logging.
category:           System
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/mordae/hs-praha

library
    exposed-modules:    Praha.Logger
    hs-source-dirs:     lib
    default-language:   GHC2021
    default-extensions:
        DefaultSignatures GeneralizedNewtypeDeriving NoImplicitPrelude
        OverloadedStrings TypeFamilies

    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Widentities -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.13 && <5,
        fast-logger >=3.0,
        mtl >=2.0,
        praha >=0.1 && <0.2,
        praha-config >=0.1 && <0.2
