cabal-version:      3.0
name:               praha
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
copyright:          Jan Hamal Dvořák
maintainer:         mordae@anilinux.org
author:             Jan Hamal Dvořák
homepage:           https://github.com/mordae/hs-praha#readme
bug-reports:        https://github.com/mordae/hs-praha/issues
synopsis:           Minimalist prelude
description:
    Praha is a minimalist prelude that tries hard not to pollute the
    namespace or export partial functions.

category:           Prelude
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/mordae/hs-praha

library
    exposed-modules:
        Praha.Types
        Praha.Extra
        Praha

    hs-source-dirs:     lib
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Widentities -Wredundant-constraints
        -Wunused-packages

    build-depends:
        base >=4.13 && <5,
        bytestring >=0.10,
        containers >=0.6,
        deepseq >=1.4,
        hashable >=1.3,
        mtl >=2.0,
        string-conversions >=0.4,
        text >=1.2,
        unliftio-core >=0.2,
        unordered-containers >=0.2,
        vector >=0.12,
        key-value
